--- a/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -86,7 +86,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -448,12 +448,237 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.LightShafts=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.Lightmass=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+Light_BP_C.TransformCommon=True
+Light_BP_C.ComponentTick=True
+Light_BP_C.Rendering=True
+Light_BP_C.Tags=True
+Light_BP_C.ComponentReplication=True
+Light_BP_C.Activation=True
+Light_BP_C.Variable=True
+Light_BP_C.Cooking=True
+Light_BP_C.Light=True
+Light_BP_C.Lightmass=True
+Light_BP_C.Performance=True
+Light_BP_C.LightFunction=True
+Light_BP_C.Light Profiles=True
+Light_BP_C.DistanceFieldShadows=True
+Light_BP_C.Input=True
+Light_BP_C.Actor=True
+Light_BP_C.Tick=True
+Light_BP_C.Replication=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+REINST_Light_BP_C_52.TransformCommon=True
+REINST_Light_BP_C_52.Light=True
+REINST_Light_BP_C_52.Rendering=True
+REINST_Light_BP_C_52.Lightmass=True
+REINST_Light_BP_C_52.Performance=True
+REINST_Light_BP_C_52.LightFunction=True
+REINST_Light_BP_C_52.Light Profiles=True
+REINST_Light_BP_C_52.DistanceFieldShadows=True
+REINST_Light_BP_C_52.Tags=True
+REINST_Light_BP_C_52.Cooking=True
+REINST_Light_BP_C_52.Input=True
+REINST_Light_BP_C_52.Actor=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+K2Node_VariableGet.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+REINST_Light_BP_C_92.TransformCommon=True
+REINST_Light_BP_C_92.Light=True
+REINST_Light_BP_C_92.Rendering=True
+REINST_Light_BP_C_92.Lightmass=True
+REINST_Light_BP_C_92.Performance=True
+REINST_Light_BP_C_92.LightFunction=True
+REINST_Light_BP_C_92.Light Profiles=True
+REINST_Light_BP_C_92.DistanceFieldShadows=True
+REINST_Light_BP_C_92.Tags=True
+REINST_Light_BP_C_92.Cooking=True
+REINST_Light_BP_C_92.Input=True
+REINST_Light_BP_C_92.Actor=True
+REINST_Light_BP_C_96.TransformCommon=True
+REINST_Light_BP_C_96.Light=True
+REINST_Light_BP_C_96.Rendering=True
+REINST_Light_BP_C_96.Lightmass=True
+REINST_Light_BP_C_96.Performance=True
+REINST_Light_BP_C_96.LightFunction=True
+REINST_Light_BP_C_96.Light Profiles=True
+REINST_Light_BP_C_96.DistanceFieldShadows=True
+REINST_Light_BP_C_96.Tags=True
+REINST_Light_BP_C_96.Cooking=True
+REINST_Light_BP_C_96.Input=True
+REINST_Light_BP_C_96.Actor=True
+REINST_Light_BP_C_100.TransformCommon=True
+REINST_Light_BP_C_100.Light=True
+REINST_Light_BP_C_100.Rendering=True
+REINST_Light_BP_C_100.Lightmass=True
+REINST_Light_BP_C_100.Performance=True
+REINST_Light_BP_C_100.LightFunction=True
+REINST_Light_BP_C_100.Light Profiles=True
+REINST_Light_BP_C_100.DistanceFieldShadows=True
+REINST_Light_BP_C_100.Tags=True
+REINST_Light_BP_C_100.Cooking=True
+REINST_Light_BP_C_100.Input=True
+REINST_Light_BP_C_100.Actor=True
+REINST_Light_BP_C_104.TransformCommon=True
+REINST_Light_BP_C_104.Light=True
+REINST_Light_BP_C_104.Rendering=True
+REINST_Light_BP_C_104.Lightmass=True
+REINST_Light_BP_C_104.Performance=True
+REINST_Light_BP_C_104.LightFunction=True
+REINST_Light_BP_C_104.Light Profiles=True
+REINST_Light_BP_C_104.DistanceFieldShadows=True
+REINST_Light_BP_C_104.Tags=True
+REINST_Light_BP_C_104.Cooking=True
+REINST_Light_BP_C_104.Input=True
+REINST_Light_BP_C_104.Actor=True
+REINST_Light_BP_C_108.TransformCommon=True
+REINST_Light_BP_C_108.Light=True
+REINST_Light_BP_C_108.Rendering=True
+REINST_Light_BP_C_108.Lightmass=True
+REINST_Light_BP_C_108.Performance=True
+REINST_Light_BP_C_108.LightFunction=True
+REINST_Light_BP_C_108.Light Profiles=True
+REINST_Light_BP_C_108.DistanceFieldShadows=True
+REINST_Light_BP_C_108.Tags=True
+REINST_Light_BP_C_108.Cooking=True
+REINST_Light_BP_C_108.Input=True
+REINST_Light_BP_C_108.Actor=True
+REINST_Light_BP_C_156.TransformCommon=True
+REINST_Light_BP_C_156.Light=True
+REINST_Light_BP_C_156.Rendering=True
+REINST_Light_BP_C_156.Lightmass=True
+REINST_Light_BP_C_156.Performance=True
+REINST_Light_BP_C_156.LightFunction=True
+REINST_Light_BP_C_156.Light Profiles=True
+REINST_Light_BP_C_156.DistanceFieldShadows=True
+REINST_Light_BP_C_156.Tags=True
+REINST_Light_BP_C_156.Cooking=True
+REINST_Light_BP_C_156.Input=True
+REINST_Light_BP_C_156.Actor=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+Light_BP_C.LOD=True
+Light_BP_C.Collision=True
+REINST_Light_BP_C_208.TransformCommon=True
+REINST_Light_BP_C_208.Light=True
+REINST_Light_BP_C_208.Rendering=True
+REINST_Light_BP_C_208.Lightmass=True
+REINST_Light_BP_C_208.Performance=True
+REINST_Light_BP_C_208.LightFunction=True
+REINST_Light_BP_C_208.Light Profiles=True
+REINST_Light_BP_C_208.DistanceFieldShadows=True
+REINST_Light_BP_C_208.Tags=True
+REINST_Light_BP_C_208.Cooking=True
+REINST_Light_BP_C_208.Input=True
+REINST_Light_BP_C_208.Actor=True
+REINST_Light_BP_C_218.TransformCommon=True
+REINST_Light_BP_C_218.Light=True
+REINST_Light_BP_C_218.Rendering=True
+REINST_Light_BP_C_218.Lightmass=True
+REINST_Light_BP_C_218.Performance=True
+REINST_Light_BP_C_218.LightFunction=True
+REINST_Light_BP_C_218.Light Profiles=True
+REINST_Light_BP_C_218.DistanceFieldShadows=True
+REINST_Light_BP_C_218.Tags=True
+REINST_Light_BP_C_218.Cooking=True
+REINST_Light_BP_C_218.Input=True
+REINST_Light_BP_C_218.Actor=True
+Light_BP_C.Default=True
+REINST_Light_BP_C_234.TransformCommon=True
+REINST_Light_BP_C_234.Light=True
+REINST_Light_BP_C_234.Rendering=True
+REINST_Light_BP_C_234.None=True
+REINST_Light_BP_C_234.Lightmass=True
+REINST_Light_BP_C_234.Performance=True
+REINST_Light_BP_C_234.Light Profiles=True
+REINST_Light_BP_C_234.LightFunction=True
+REINST_Light_BP_C_234.DistanceFieldShadows=True
+REINST_Light_BP_C_234.Tags=True
+REINST_Light_BP_C_234.Cooking=True
+REINST_Light_BP_C_234.Input=True
+REINST_Light_BP_C_234.Actor=True
+REINST_Light_BP_C_242.TransformCommon=True
+REINST_Light_BP_C_242.Light=True
+REINST_Light_BP_C_242.Rendering=True
+REINST_Light_BP_C_242.None=True
+REINST_Light_BP_C_242.Lightmass=True
+REINST_Light_BP_C_242.Performance=True
+REINST_Light_BP_C_242.Light Profiles=True
+REINST_Light_BP_C_242.LightFunction=True
+REINST_Light_BP_C_242.DistanceFieldShadows=True
+REINST_Light_BP_C_242.Tags=True
+REINST_Light_BP_C_242.Cooking=True
+REINST_Light_BP_C_242.Input=True
+REINST_Light_BP_C_242.Actor=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Soba_Blueprint.Soba_Blueprint=0
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=0
+/Game/FirstPersonBP/Blueprints/Light_BP.Light_BP=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Soba_Blueprint.Soba_Blueprint;
 
 [DetailCategoriesAdvanced]
@@ -469,6 +694,11 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 Object=
 EditorProjectAppearanceSettings="\"Object.Units.DistanceUnits\" "
 DeveloperSettings=
+Light_BP_C=
+PointLight=
+Light=
+REINST_Light_BP_C_208="\"Object.Light.LightComponent.Object.Light.LightingChannels\" "
+REINST_Light_BP_C_218="\"Object.Light.LightComponent.Object.Light.LightingChannels\" "
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
@@ -489,7 +719,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../LD/LudumDare_41/LD41/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/Tea/Documents/LudumDare_41/LD41/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../LD/LudumDare_41/LD41/Content/
 FBX=../../../../../../LD/LudumDare_41/LD41/Content/
 FBXAnim=../../../../../../LD/LudumDare_41/LD41/Content/
@@ -1085,5 +1315,8 @@ ExternalImagePicker.TimeStamp=2018.04.21-09.20.24
 ExternalImagePicker.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2018.04.21-09.20.26
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
