--- a/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -39,6 +39,8 @@ LastLevel=/Game/FirstPersonBP/Maps/L0
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Soba_Blueprint.Soba_Blueprint
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Light_BP.Light_BP
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -88,7 +90,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonBP/Blueprints
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -481,6 +483,36 @@ ProjectileMovementComponent.ComponentReplication=True
 ProjectileMovementComponent.Activation=True
 ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+Light_BP_C.TransformCommon=True
+Light_BP_C.Light=True
+Light_BP_C.Rendering=True
+Light_BP_C.Default=True
+Light_BP_C.Lightmass=True
+Light_BP_C.Performance=True
+Light_BP_C.Light Profiles=True
+Light_BP_C.LightFunction=True
+Light_BP_C.DistanceFieldShadows=True
+Light_BP_C.Tags=True
+Light_BP_C.Cooking=True
+Light_BP_C.Input=True
+Light_BP_C.Actor=True
+Light_BP_C.Tick=True
+Light_BP_C.Replication=True
+K2Node_VariableGet.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Soba_Blueprint.Soba_Blueprint=1
@@ -488,6 +520,7 @@ ProjectileMovementComponent.Events=True
 /Game/FirstPersonBP/Blueprints/FirstPersonProjectile.FirstPersonProjectile=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonBP/Blueprints/Light_BP.Light_BP;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Soba_Blueprint.Soba_Blueprint;
 
@@ -531,7 +564,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Jon/Documents/LudumDare_41/LD41/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/Tea/Documents/LudumDare_41/LD41/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../LD/LudumDare_41/LD41/Content/
 FBX=../../../../../../LD/LudumDare_41/LD41/Content/
 FBXAnim=../../../../../../LD/LudumDare_41/LD41/Content/
