--- a/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LD41/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -31,15 +31,15 @@ MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-CA8O48T
 LastExecutedLaunchName=DESKTOP-CA8O48T
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=38,Y=0)
+NewWindowPosition=(X=315,Y=143)
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/L0
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Soba_Blueprint.Soba_Blueprint
+CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/Light_BP.Light_BP
+OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode
 OpenAssetsAtExit=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -513,6 +513,21 @@ Light_BP_C.Actor=True
 Light_BP_C.Tick=True
 Light_BP_C.Replication=True
 K2Node_VariableGet.DefaultValueCategory=True
+FirstPersonGameMode_C.Tick=True
+FirstPersonGameMode_C.Classes=True
+FirstPersonGameMode_C.Game=True
+FirstPersonGameMode_C.GameMode=True
+REINST_FirstPersonCharacter_C_32.None=True
+REINST_FirstPersonCharacter_C_32.Tick=True
+REINST_FirstPersonCharacter_C_32.Character=True
+REINST_FirstPersonCharacter_C_32.Camera=True
+REINST_FirstPersonCharacter_C_32.Pawn=True
+REINST_FirstPersonCharacter_C_32.Rendering=True
+REINST_FirstPersonCharacter_C_32.Replication=True
+REINST_FirstPersonCharacter_C_32.Input=True
+REINST_FirstPersonCharacter_C_32.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Soba_Blueprint.Soba_Blueprint=1
@@ -564,7 +579,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Tea/Documents/LudumDare_41/LD41/Content/FirstPersonBP/Maps
+UNR=../../../../../../Users/DeinVenteD/Projects/Jam/LudumDare_41/LD41/Content/FirstPersonBP/Maps
 BRUSH=../../../../../../LD/LudumDare_41/LD41/Content/
 FBX=../../../../../../LD/LudumDare_41/LD41/Content/
 FBXAnim=../../../../../../LD/LudumDare_41/LD41/Content/
@@ -1204,5 +1219,9 @@ LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 
 [MessageLog]
 LastLogListing=PIE
+
+[ColorThemes]
+Theme0=New Theme
+Theme0Color0=(R=54.019325,G=0.939696,B=1.000000,A=1.000000)
 
 
