--- a/LD41/Config/DefaultEngine.ini
+++ b/LD41/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+EditorStartupMap=/Game/FirstPersonBP/Maps/L0.L0
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonBP/Maps/L0.L0
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
@@ -29,6 +29,11 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AntiAliasing=0
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -70,9 +75,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.AutoExposure=False
-r.DefaultFeature.MotionBlur=False
-r.DefaultFeature.AntiAliasing=0
-
