--- a/LD41/Config/DefaultGame.ini
+++ b/LD41/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=88E0A8AA470A9584463B42850BA63867
-ProjectName=First Person BP Game Template
+ProjectName=Corruption
 
 [StartupActions]
 bAddPacks=True
